--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,48 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title>Hledání lokality</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-item>
+    <ion-label position="floating">Město</ion-label>
+    <ion-input
+      type="text"
+      placeholder="Např. Brno, Praha, Zlín"
+      (ionInput)="onCityInput($event)">
+    </ion-input>
+  </ion-item>
+
+  <ion-button expand="block" class="ion-margin-top" (click)="searchCity()">
+    Vyhledat
+  </ion-button>
+
+  <ion-text color="danger" *ngIf="error">
+    <p class="ion-margin-top">{{ error }}</p>
+  </ion-text>
+
+  <ion-spinner *ngIf="loading" class="ion-margin-top"></ion-spinner>
+
+  <!-- KARTA S POČASÍM -->
+  <ion-card class="ion-margin-top" *ngIf="currentWeather && !loading">
+    <ion-card-header>
+      <ion-card-title>
+        {{ currentWeather.name }}
+      </ion-card-title>
+
+      <!-- podtitulek jen pokud existuje pole weather a má aspoň jednu položku -->
+      <ion-card-subtitle *ngIf="currentWeather.weather && currentWeather.weather.length">
+        {{ currentWeather.weather[0].description }}
+      </ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      <p *ngIf="currentWeather.main">Teplota: {{ currentWeather.main.temp }} °C</p>
+      <p *ngIf="currentWeather.main">Pocitově: {{ currentWeather.main.feels_like }} °C</p>
+      <p *ngIf="currentWeather.main">Vlhkost: {{ currentWeather.main.humidity }} %</p>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
