--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,47 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <ion-title>Předpověď</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-item>
+    <ion-label position="floating">Město</ion-label>
+    <ion-input
+      type="text"
+      placeholder="Např. Brno, Praha, Zlín"
+      (ionInput)="onCityInput($event)">
+    </ion-input>
+  </ion-item>
+
+  <ion-button expand="block" class="ion-margin-top" (click)="loadForecast()">
+    Načíst předpověď
+  </ion-button>
+
+  <ion-text color="danger" *ngIf="error">
+    <p class="ion-margin-top">{{ error }}</p>
+  </ion-text>
+
+  <ion-spinner *ngIf="loading" class="ion-margin-top"></ion-spinner>
+
+  <!-- Seznam předpovědi -->
+  <ion-list *ngIf="forecastList.length && !loading">
+
+    <ion-item *ngFor="let item of forecastList">
+      <ion-label>
+        <h2>
+          {{ item.dt_txt }}
+        </h2>
+        <p *ngIf="item.weather && item.weather.length">
+          {{ item.weather[0].description }}
+        </p>
+        <p *ngIf="item.main">
+          Teplota: {{ item.main.temp }} °C
+        </p>
+      </ion-label>
+    </ion-item>
+
+  </ion-list>
+
 </ion-content>
