--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Oblíbené & Historie</ion-title>
+    <ion-title>Historie</ion-title>
   </ion-toolbar>
 </ion-header>
 
