--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,9 @@
 // For information on how to create your own theme, please refer to:
 // https://ionicframework.com/docs/theming/
+:root {
+    --ion-color-primary: #1976d2; /* modrá */
+    --ion-color-primary-contrast: #ffffff;
+    --ion-color-secondary: #03a9f4;
+    --ion-color-tertiary: #0288d1;
+  }
+  
