--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,12 +7,12 @@
 <ion-content class="ion-padding">
 
   <ion-item>
-    <ion-label position="floating">Město</ion-label>
-    <ion-input
-      type="text"
-      placeholder="Např. Brno, Praha, Zlín"
-      (ionInput)="onCityInput($event)">
-    </ion-input>
+    <ion-searchbar
+      placeholder="Hledat město..."
+      (ionInput)="onCityInput($event)"
+      debounce="400">
+    </ion-searchbar>
+
   </ion-item>
 
   <ion-button expand="block" class="ion-margin-top" (click)="loadForecast()">
