--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,7 +10,7 @@
     <ion-searchbar
       placeholder="Hledat město..."
       (ionInput)="onCityInput($event)"
-      debounce="400">
+      (ionClear)="forecastList=[]; groupedForecast=[];">
     </ion-searchbar>
 
   </ion-item>
@@ -25,23 +25,31 @@
 
   <ion-spinner *ngIf="loading" class="ion-margin-top"></ion-spinner>
 
-  <!-- Seznam předpovědi -->
-  <ion-list *ngIf="forecastList.length && !loading">
+  <div *ngIf="!loading && groupedForecast.length">
+    <div *ngFor="let day of groupedForecast" class="day-block ion-margin-top">
+      <ion-item lines="none" class="day-header">
+        <ion-label>
+          <h2>{{ (day.date) | date:'EEEE, d. MMM' }}</h2>
+          <p class="muted">{{ day.date }}</p>
+        </ion-label>
+      </ion-item>
 
-    <ion-item *ngFor="let item of forecastList">
-      <ion-label>
-        <h2>
-          {{ item.dt_txt }}
-        </h2>
-        <p *ngIf="item.weather && item.weather.length">
-          {{ item.weather[0].description }}
-        </p>
-        <p *ngIf="item.main">
-          Teplota: {{ item.main.temp }} °C
-        </p>
-      </ion-label>
-    </ion-item>
+      <ion-list>
+        <ion-item *ngFor="let item of day.items">
+          <ion-label>
+            <h3>{{ item.dt_txt | date:'H:mm' }}</h3>
+            <p *ngIf="item.weather && item.weather.length">
+              {{ item.weather[0].description }}
+            </p>
+            <p *ngIf="item.main">Teplota: {{ item.main.temp | number:'1.0-0' }} °C</p>
+          </ion-label>
 
-  </ion-list>
+          <ion-thumbnail slot="start" *ngIf="item.weather && item.weather.length">
+            <img [src]="'https://openweathermap.org/img/wn/' + item.weather[0].icon + '@2x.png'"/>
+          </ion-thumbnail>
+        </ion-item>
+      </ion-list>
+    </div>
+  </div>
 
 </ion-content>
