--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -4,8 +4,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding forecast-content">
 
+    <!-- searchbar pro vyhledani predpovedi pocasi -->
   <ion-item>
     <ion-searchbar
       placeholder="Hledat město..."
@@ -25,6 +26,7 @@
 
   <ion-spinner *ngIf="loading" class="ion-margin-top"></ion-spinner>
 
+  <!-- div s preedpovedi pocasi podle dnu v tydnu -->
   <div *ngIf="!loading && groupedForecast.length">
     <div *ngFor="let day of groupedForecast" class="day-block ion-margin-top">
       <ion-item lines="none" class="day-header">
@@ -44,9 +46,10 @@
             <p *ngIf="item.main">Teplota: {{ item.main.temp | number:'1.0-0' }} °C</p>
           </ion-label>
 
-          <ion-thumbnail slot="start" *ngIf="item.weather && item.weather.length">
+          <ion-thumbnail slot="start" class="weather-thumb">
             <img [src]="'https://openweathermap.org/img/wn/' + item.weather[0].icon + '@2x.png'"/>
           </ion-thumbnail>
+          
         </ion-item>
       </ion-list>
     </div>
