--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -20,4 +20,12 @@ ion-searchbar {
     font-size: 0.85rem;
   }
   
+  .weather-thumb {
+    background: rgba(255,255,255,0.8);
+    border-radius: 12px;
+    padding: 6px;
+  }
+  ion-item-bg {
+    background-color: gray;
+  }
   
